# typetidy

./: package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
.github/workflows/: release.yml
app/: globals.css  layout.tsx  page.tsx
app/(auth-pages)/: layout.tsx
app/(auth-pages)/forgot-password/: page.tsx
app/(auth-pages)/sign-up/: page.tsx
app/desktop/: page.tsx
app/download/: page.tsx
app/protected/: page.tsx
components/: auth-checker.tsx  footer.tsx  header-auth.tsx  icons.tsx  return-to-app-button.tsx  scroll-button.tsx  sign-in-button.tsx
scripts/: generate-icons.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
